force-app/main/default/objects/Autorabit_Test__c/Autorabit_Test__c.object-meta.xml
<CustomObject>
    <label>Autorabit Test</label>
    <nameField>
        <label>Autorabit Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Autorabit Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>