force-app/main/default/objects/Autorabit_Test__c/fields/AutoPicklist__c.field-meta.xml
<CustomField>
    <fullName>AutoPicklist__c</fullName>
    <label>AutoPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>