force-app/main/default/objects/Autorabit_Test__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Paresh : Updating the des</description>
    <inlineHelpText>Lavanya - updating the Help text</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>