force-app/main/default/objects/Autorabit_Test__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <description>Update by Mani , 2nd update</description>
    <label>Employee Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>