force-app/main/default/objects/Autorabit_Test__c/fields/Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Test</description>
    <label>Salesforce</label>
    <type>Checkbox</type>
</CustomField>